add advantages section and track time

--- a/source/index.html
+++ b/source/index.html
@@ -385,6 +385,44 @@
           >
         </swiper-container>
       </section>
+      <section class="advantages">
+        <h1 class="advantages__title">Преимущества</h1>
+        <h2 class="advantages__subtitle">Главные причины выбрать Drink2Go</h2>
+        <ul class="advantages__list">
+          <li class="advantages__item">
+            <h3 class="advantages__item-title advantages__item-title--speed">
+              Скорость
+            </h3>
+            <p class="advantages__item-text">
+              Готовый напиток всегда под рукой — просто открой банку
+            </p>
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__item-title advantages__item-title--pocket">
+              Удобство
+            </h3>
+            <p class="advantages__item-text">
+              Легко помещается и в карман, и в маленькую сумочку
+            </p>
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__item-title advantages__item-title--energy">
+              Бодрость
+            </h3>
+            <p class="advantages__item-text">
+              Сбалансированная доза кофеина даст мощный заряд энергии
+            </p>
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__item-title advantages__item-title--eco">
+              Экологичность
+            </h3>
+            <p class="advantages__item-text">
+              Вся упаковка сделана из перерабатываемых материалов
+            </p>
+          </li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
