--- a/source/index.html
+++ b/source/index.html
@@ -46,13 +46,13 @@
             <source
               width="82"
               height="36"
-              media="(min-width: 768px) and (max-width: 1279px)"
+              media="(min-width: 768px) and (max-width: 1439px)"
               srcset="images/logo_md.svg"
             />
             <source
               width="170"
               height="36"
-              media="(min-width: 1280px)"
+              media="(min-width: 1440px)"
               srcset="images/logo_lg.svg"
             />
             <img width="32" height="36" src="images/logo_xs.svg" alt="Logo" />
@@ -128,7 +128,7 @@
                     images/flat_white_md@2x.webp 2x
                   "
                   type="image/webp"
-                  media="(min-width: 768px) and (max-width: 1279px)"
+                  media="(min-width: 768px) and (max-width: 1439px)"
                   width="476"
                   height="476"
                 />
@@ -138,7 +138,7 @@
                     images/flat_white_lg@2x.webp 2x
                   "
                   type="image/webp"
-                  media="(min-width: 1280px)"
+                  media="(min-width: 1440px)"
                   width="600"
                   height="600"
                 />
@@ -158,7 +158,7 @@
                     images/flat_white_md@2x.png 2x
                   "
                   type="image/png"
-                  media="(min-width: 768px) and (max-width: 1279px)"
+                  media="(min-width: 768px) and (max-width: 1439px)"
                   width="476"
                   height="476"
                 />
@@ -168,7 +168,7 @@
                     images/flat_white_lg@2x.png 2x
                   "
                   type="image/png"
-                  media="(min-width: 1280px)"
+                  media="(min-width: 1440px)"
                   width="600"
                   height="600"
                 />
@@ -220,7 +220,7 @@
                     images/espresso_xs@2x.webp 2x
                   "
                   type="image/webp"
-                  media="(min-width: 768px) and (max-width: 1279px)"
+                  media="(min-width: 768px) and (max-width: 1439px)"
                   width="476"
                   height="476"
                 />
@@ -230,7 +230,7 @@
                     images/espresso_xs@2x.webp 2x
                   "
                   type="image/webp"
-                  media="(min-width: 1280px)"
+                  media="(min-width: 1440px)"
                   width="600"
                   height="600"
                 />
@@ -250,7 +250,7 @@
                     images/espresso_xs@2x.png 2x
                   "
                   type="image/png"
-                  media="(min-width: 768px) and (max-width: 1279px)"
+                  media="(min-width: 768px) and (max-width: 1439px)"
                   width="476"
                   height="476"
                 />
@@ -260,7 +260,7 @@
                     images/espresso_xs@2x.png 2x
                   "
                   type="image/png"
-                  media="(min-width: 1280px)"
+                  media="(min-width: 1440px)"
                   width="600"
                   height="600"
                 />
@@ -311,7 +311,7 @@
                     images/lavender_xs@2x.webp 2x
                   "
                   type="image/webp"
-                  media="(min-width: 768px) and (max-width: 1279px)"
+                  media="(min-width: 768px) and (max-width: 1439px)"
                   width="476"
                   height="476"
                 />
@@ -321,7 +321,7 @@
                     images/lavender_xs@2x.webp 2x
                   "
                   type="image/webp"
-                  media="(min-width: 1280px)"
+                  media="(min-width: 1440px)"
                   width="600"
                   height="600"
                 />
@@ -341,7 +341,7 @@
                     images/lavender_xs@2x.png 2x
                   "
                   type="image/png"
-                  media="(min-width: 768px) and (max-width: 1279px)"
+                  media="(min-width: 768px) and (max-width: 1439px)"
                   width="476"
                   height="476"
                 />
@@ -351,7 +351,7 @@
                     images/lavender_xs@2x.png 2x
                   "
                   type="image/png"
-                  media="(min-width: 1280px)"
+                  media="(min-width: 1440px)"
                   width="600"
                   height="600"
                 />
@@ -422,6 +422,10 @@
             </p>
           </li>
         </ul>
+      </section>
+      <section class="catalog">
+        <h1 class="advantages__title">Каталог</h1>
+        <h2 class="advantages__subtitle">Каталог кофейных напитков</h2>
       </section>
     </main>
   </body>
