--- a/source/index.html
+++ b/source/index.html
@@ -1000,6 +1000,107 @@
       <div id="map" class="map map--nojs"></div>
       <footer class="footer"></footer>
     </main>
+    <footer class="footer">
+      <div class="footer__wrapper">
+        <header class="footer__header">
+          <div class="footer__logo-wrapper">
+          <picture>
+            <source
+              width="82"
+              height="36"
+              media="(max-width: 1439px)"
+              srcset="images/logo_md.svg"
+            />
+            <source
+              width="170"
+              height="36"
+              media="(min-width: 1440px)"
+              srcset="images/logo_lg.svg"
+            />
+            <img width="82" height="36" src="images/logo_md.svg" alt="Logo" />
+          </picture>
+          <h1 class="footer__title">Интернет-магазин кофейных напитков</h1>
+          </div>
+          <div class="footer__social">
+            <a class="footer__social-link" href="#">
+              <img width="20" height="20" src="images/vk.svg" alt="Вконтакте" />
+            </a>
+            <a class="footer__social-link" href="#">
+              <img
+                width="20"
+                height="20"
+                src="images/ok.svg"
+                alt="Одноклассники"
+              />
+            </a>
+            <a class="footer__social-link" href="#">
+              <img
+                width="20"
+                height="20"
+                src="images/pinterest.svg"
+                alt="Pinterest"
+              />
+            </a>
+          </div>
+        </header>
+        <section class="footer__nav footer__section">
+          <ul class="footer__nav-list">
+            <h4 class="footer__nav-list-title">Интернет-магазин</h4>
+            <li class="footer__nav-list-item">
+              <a class="footer__nav-list-link" href="#">Каталог</a>
+            </li>
+            <li class="footer__nav-list-item">
+              <a class="footer__nav-list-link" href="#">Доставка</a>
+            </li>
+            <li class="footer__nav-list-item">
+              <a class="footer__nav-list-link" href="#">Способ оплаты</a>
+            </li>
+            <li class="footer__nav-list-item">
+              <a class="footer__nav-list-link" href="#">О нас</a>
+            </li>
+          </ul>
+        </section>
+        <section class="footer__media footer__section">
+          <ul class="footer__nav-list">
+            <h4 class="footer__nav-list-title">Медиа</h4>
+            <li class="footer__nav-list-item">
+              <a class="footer__nav-list-link" href="#">Блог</a>
+            </li>
+            <li class="footer__nav-list-item">
+              <a class="footer__nav-list-link" href="#">Информация для СМИ</a>
+            </li>
+            <li class="footer__nav-list-item">
+              <a class="footer__nav-list-link" href="#">Правовая информация</a>
+            </li>
+          </ul>
+        </section>
+        <section class="footer__contacts footer__section">
+          <ul class="footer__nav-list footer__contacts-list">
+            <h4 class="footer__nav-list-title">Контакты</h4>
+            <li class="footer__nav-list-item">
+              <a
+                class="footer__contacts-list-link footer__contacts-list-link--address"
+                href="#"
+                >Санкт-Петербург, набережная реки Карповки, дом 5</a
+              >
+            </li>
+            <li class="footer__nav-list-item">
+              <a
+                class="footer__contacts-list-link footer__contacts-list-link--phone"
+                href="#"
+                >+7 (999) 999-99-99</a
+              >
+            </li>
+          </ul>
+        </section>
+        <div class="footer__copyright">
+          <p class="footer__copyright-text">Разработанно в</p>
+          <a class="footer__copyright-link" href="#">
+            HTML Academy
+          </button>
+        </div>
+      </div>
+    </footer>
     <script
       src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
       integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
