add burger menu script

--- a/source/index.html
+++ b/source/index.html
@@ -95,7 +95,7 @@
                 <p class="header__user-text">Корзина</p>
               </a>
             </li>
-            <li class="header__user-item">
+            <li id="burger" class="header__user-item visually-hidden">
               <button
                 type="button"
                 class="header__user-link header__user-burger header__user-burger--open"
