add html academy link

--- a/source/index.html
+++ b/source/index.html
@@ -1095,7 +1095,7 @@
         </section>
         <div class="footer__copyright">
           <p class="footer__copyright-text">Разработанно в</p>
-          <a class="footer__copyright-link" href="#">
+          <a class="footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
             HTML Academy
           </button>
         </div>
